[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Hero.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.737, 98.3234 )

[node name="Hero" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 20
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 3.0625 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AttackCooldown" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -112.0
margin_right = 32.0
margin_bottom = -98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 4.48, 1 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 16

[node name="Camera2D" type="Camera2D" parent="."]
current = true
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
